k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cancer-service
spec:
  replicas: 2

  selector:
    matchLabels:
      app: cancer-service

  template:
    metadata:
      labels:
        app: cancer-service

    spec:
      containers:
        - name: api
          image: cancer-service:1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
