k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cancer-service
spec:
  type: ClusterIP

  selector:
    app: cancer-service

  ports:
    - port: 80
      targetPort: 8000
