k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: mlflow.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
    - host: cancer.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cancer-service
                port:
                  number: 80
